--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
+
 <head>
   <meta charset="utf-8">
-  <title>RicardohuaripataPortfolioweb</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name=description content="¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la tecnología, los deportes y los desafíos. Con una formación en Desarrollo de aplicaciones web, actualmente me encuentro en un emocionante viaje de aprendizaje para especializarme como Full Stack Developer y explorar nuevas oportunidades en la industria tecnológica.">
+  <meta name=apple-mobile-web-app-title content="ricardodev.vercel.app">
+  <meta name=application-name content="ricardodev.vercel.app">
+  <link rel=canonical href=https://ricardodev.vercel.app/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preload" as="image" href="assets/images/retrato.webp"/>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
