projects section implemented

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta name=application-name content="ricardodev.vercel.app">
   <link rel=canonical href=https://ricardodev.vercel.app/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preload" as="image" href="assets/images/retrato.webp"/>
+  <link rel="preload" as="image" href="assets/images/retrato-min.webp"/>
 </head>
 
 <body>
