--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,20 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width">
-  <meta name=description content="¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la tecnología, los deportes y los desafíos. Con una formación en Desarrollo de aplicaciones web, actualmente me encuentro en un emocionante viaje de aprendizaje para especializarme como Full Stack Developer y explorar nuevas oportunidades en la industria tecnológica.">
+  <meta name=description
+    content="¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la tecnología, los deportes y los desafíos. Con una formación en Desarrollo de aplicaciones web, actualmente me encuentro en un emocionante viaje de aprendizaje para especializarme como Full Stack Developer y explorar nuevas oportunidades en la industria tecnológica.">
   <meta name=apple-mobile-web-app-title content="ricardodev.vercel.app">
   <meta name=application-name content="ricardodev.vercel.app">
-  <link rel=canonical href=https://ricardodev.vercel.app/>
+  <meta property="og:title" content="Ricardo Huaripata 👨‍💻 | Full Stack Developer" />
+  <meta property="twitter:title" content="Ricardo Huaripata 👨‍💻 | Full Stack Developer" />
+  <meta property="og:description"
+    content="¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la tecnología, los deportes y los desafíos. Con una formación en Desarrollo de aplicaciones web, actualmente me encuentro en un emocionante viaje de aprendizaje para especializarme como Full Stack Developer y explorar nuevas oportunidades en la industria tecnológica." />
+  <meta property="twitter:description"
+    content="¡Hola Mundo! 👋🏼 Soy Ricardo, un apasionado de la tecnología, los deportes y los desafíos. Con una formación en Desarrollo de aplicaciones web, actualmente me encuentro en un emocionante viaje de aprendizaje para especializarme como Full Stack Developer y explorar nuevas oportunidades en la industria tecnológica." />
+  <meta property="og:url" content="https://ricardodev.vercel.app" />
+  <meta property="twitter:url" content="https://ricardodev.vercel.app" />
+  <meta property="og:type" content="website" />
+  <link rel=canonical href=https://ricardodev.vercel.app />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
