--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,16 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HE12ML5E77"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HE12ML5E77');
+</script>
+
 <body>
   <app-root></app-root>
 </body>
