--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preload" as="image" href="/assets/images/logo.png">
+  <meta name="theme-color" content="#3ec2ff">
 </head>
 
 <!-- Google tag (gtag.js) -->
