--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preload" href="/assets/onest-latin-wght-normal.ycwkluYs.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" as="image" href="/assets/images/logo.png">
   <meta name="theme-color" content="#3ec2ff">
 </head>
