--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <base href="/">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preload" href="/assets/onest-latin-wght-normal.ycwkluYs.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" as="image" href="/assets/images/logo.png">
